[tool.poetry]
name = "endless-sdk"
version = "1.0.0"
description = "Endless SDK"
authors = ["Endless Labs <https://www.endless.link/>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/endless-labs/endless-move-framework"
homepage = "https://github.com/endless-labs/endless-move-framework"
keywords = ["web3", "sdk", "endless", "blockchain"]

[tool.setuptools.package-data]
"endless-sdk" = ["py.typed"]

[tool.poetry.dependencies]
ecdsa = "0.18.0"
python-graphql-client = "^0.4.3"
httpx = "^0.27.0"
PyNaCl = "^1.5.0"
python = ">=3.8.1"
tomli = "^2.0.1"
typing-extensions = "^4.4.0"
behave = "^1.2.6"
types-six = "^1.16.21.20240513"
base58 = "^2.1.1"
aiohttp = "^3.0.0"

[tool.poetry.dev-dependencies]
autoflake = "2.2.0"
black = "^24.3.0"
coverage = "^7.2.4"
flake8 = "7.0.0"
isort = "^5.10.1"
mypy = "^1.0.0"
mypy-extensions = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
